[gd_scene load_steps=10 format=2]

[ext_resource path="res://Main/Main.gd" type="Script" id=1]
[ext_resource path="res://Main/assets/mud.png" type="Texture" id=2]
[ext_resource path="res://Tree/Tree.tscn" type="PackedScene" id=3]
[ext_resource path="res://Stegasaurus/Steggy.tscn" type="PackedScene" id=4]
[ext_resource path="res://Triceratops/Triceratops.tscn" type="PackedScene" id=5]
[ext_resource path="res://fonts/score_font.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Main/HUD.gd" type="Script" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 417.9, -14.318, -12.8641, -69.0599, 12.8641, 69.0599, 351.811, 113.874, -2.70823, -67.7058, 2.70823, 67.7058, 454.047, 277.722, -8.80175, -53.4876, 8.80175, 53.4876, 389.049, 405.686, -2.61414, -42.0597, 2.61414, 42.0597, 463.14, 526.666, 0, 0, 0, 0, 431.695, 628.87 )
}

[sub_resource type="DynamicFont" id=2]
size = 41
outline_size = 2
font_data = ExtResource( 6 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="SwimPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="FishSpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="SharkSpawnTimer" type="Timer" parent="."]
one_shot = true

[node name="Trees" type="Node" parent="."]

[node name="Tree" parent="Trees" instance=ExtResource( 3 )]
position = Vector2( 173.097, 76.1625 )

[node name="Tree2" parent="Trees" instance=ExtResource( 3 )]
position = Vector2( 297.726, 220.025 )

[node name="Tree3" parent="Trees" instance=ExtResource( 3 )]
position = Vector2( 670.845, 99.242 )

[node name="Tree4" parent="Trees" instance=ExtResource( 3 )]
position = Vector2( 536.984, 339.269 )

[node name="Tree5" parent="Trees" instance=ExtResource( 3 )]
position = Vector2( 93.8568, 483.132 )

[node name="Tree6" parent="Trees" instance=ExtResource( 3 )]
position = Vector2( 712.388, 501.595 )

[node name="Tree8" parent="Trees" instance=ExtResource( 3 )]
position = Vector2( 723.159, 278.493 )
z_index = 1

[node name="Tree7" parent="Trees" instance=ExtResource( 3 )]
position = Vector2( 78.4705, 253.875 )

[node name="Dinos" type="Node" parent="."]

[node name="Steggy" parent="Dinos" instance=ExtResource( 4 )]
position = Vector2( 238.871, 320.838 )
z_index = 1

[node name="Triceratops" parent="Dinos" instance=ExtResource( 5 )]
position = Vector2( 572.526, 163.579 )
z_index = 1

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 7 )

[node name="Player1Name" type="Label" parent="HUD"]
margin_left = 6.50002
margin_top = 7.0
margin_right = 88.5
margin_bottom = 21.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.54902, 0.321569, 0, 1 )
text = "Steggy:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player1Score" type="Label" parent="HUD"]
margin_left = 237.5
margin_top = 8.0
margin_right = 501.5
margin_bottom = 58.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.54902, 0.321569, 0, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2Name" type="Label" parent="HUD"]
margin_left = 498.5
margin_top = 5.0
margin_right = 762.5
margin_bottom = 55.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.00392157, 0.494118, 0.172549, 1 )
text = "Tricy:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2Score" type="Label" parent="HUD"]
margin_left = 673.0
margin_top = 7.5
margin_right = 937.0
margin_bottom = 57.5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.00392157, 0.494118, 0.172549, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="FishSpawnTimer" to="." method="_on_FishSpawnTimer_timeout"]
[connection signal="timeout" from="SharkSpawnTimer" to="." method="_on_SharkSpawnTimer_timeout"]
[connection signal="update_player1_score" from="Dinos/Steggy" to="HUD" method="_on_Steggy_update_player1_score"]
[connection signal="update_player2_score" from="Dinos/Triceratops" to="HUD" method="_on_Triceratops_update_player2_score"]
